# bids_converting

./: .gitignore  README.md  config.json  generate_bids.py  generate_global_files.py  pyproject.toml  requirements.txt  samples.json  samples.yaml  test_generate_bids.py  utils.py  utils_test.py  utils_test_v1.py
src/: bids_config.py  generate_bids.py  generate_global_files.py  utils.py
